fix(lotto-result-dto): 생성자에서 사용하는 메서드 수정 unmodifiableMap -> copyOf